--- a/Thesis.ipynb
+++ b/Thesis.ipynb
@@ -125,16 +125,54 @@
    "metadata": {},
    "source": [
     "***\n",
-    "\n",
+    "Gradient boosting classifier\n",
     "***"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 194,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7657250470809793\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from scipy import stats\n",
+    "from sklearn.ensemble import GradientBoostingClassifier\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "def accuracy(df, dropped_columns):\n",
+    "    X = df.drop(columns=dropped_columns)\n",
+    "    y = df['Target']\n",
+    "    X_train, X_eval, y_train, y_eval = train_test_split(X, y, test_size=0.6, random_state=42)\n",
+    "    tree_classifier = GradientBoostingClassifier()\n",
+    "    tree_classifier.fit(X_train, y_train)\n",
+    "    y_pred = tree_classifier.predict(X_eval)\n",
+    "    return accuracy_score(y_eval, y_pred)\n",
+    "\n",
+    "dropped_columns = ['Target', 'Previous qualification', 'Scholarship holder']\n",
+    "'''\n",
+    "for c in columns[:len(columns) - 1]:\n",
+    "    dropped_columns.append(c)\n",
+    "    X = df.drop(columns=dropped_columns)\n",
+    "    y = df['Target']\n",
+    "    X_train, X_eval, y_train, y_eval = train_test_split(X, y, test_size=0.6, random_state=42)\n",
+    "    tree_classifier = DecisionTreeClassifier()\n",
+    "    tree_classifier.fit(X_train, y_train)\n",
+    "    y_pred = tree_classifier.predict(X_eval)\n",
+    "    accuracy = accuracy_score(y_eval, y_pred)\n",
+    "    print(accuracy, c)\n",
+    "    dropped_columns.pop()\n",
+    "'''\n",
+    "print(accuracy(df,dropped_columns))"
+   ]
   }
  ],
  "metadata": {
