--- a/Thesis.ipynb
+++ b/Thesis.ipynb
@@ -9,9 +9,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unexpected exception formatting exception. Falling back to standard exception\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/poimidorka/Desktop/Code/Constructor/Thesis/venv/lib/python3.12/site-packages/IPython/core/interactiveshell.py\", line 3577, in run_code\n",
+      "  File \"/var/folders/82/krn9rjfj187bgcc_hdqmb18r0000gn/T/ipykernel_2131/3450704787.py\", line 1, in <module>\n",
+      "    import pandas as pd\n",
+      "ModuleNotFoundError: No module named 'pandas'\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/poimidorka/Desktop/Code/Constructor/Thesis/venv/lib/python3.12/site-packages/pygments/styles/__init__.py\", line 45, in get_style_by_name\n",
+      "ModuleNotFoundError: No module named 'pygments.styles.default'\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"/Users/poimidorka/Desktop/Code/Constructor/Thesis/venv/lib/python3.12/site-packages/IPython/core/interactiveshell.py\", line 2168, in showtraceback\n",
+      "  File \"/Users/poimidorka/Desktop/Code/Constructor/Thesis/venv/lib/python3.12/site-packages/IPython/core/ultratb.py\", line 1454, in structured_traceback\n",
+      "  File \"/Users/poimidorka/Desktop/Code/Constructor/Thesis/venv/lib/python3.12/site-packages/IPython/core/ultratb.py\", line 1345, in structured_traceback\n",
+      "  File \"/Users/poimidorka/Desktop/Code/Constructor/Thesis/venv/lib/python3.12/site-packages/IPython/core/ultratb.py\", line 1192, in structured_traceback\n",
+      "  File \"/Users/poimidorka/Desktop/Code/Constructor/Thesis/venv/lib/python3.12/site-packages/IPython/core/ultratb.py\", line 1082, in format_exception_as_a_whole\n",
+      "  File \"/Users/poimidorka/Desktop/Code/Constructor/Thesis/venv/lib/python3.12/site-packages/IPython/core/ultratb.py\", line 1133, in get_records\n",
+      "  File \"/Users/poimidorka/Desktop/Code/Constructor/Thesis/venv/lib/python3.12/site-packages/pygments/styles/__init__.py\", line 47, in get_style_by_name\n",
+      "pygments.util.ClassNotFound: Could not find style module 'pygments.styles.default', though it should be builtin.\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import sklearn as sk\n",
@@ -30,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
